implement restack configure events, fix stackUnder when stacking up under a foreign client

BUG: 288721
REVIEW: 103387